fixed blockquote spacing

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -193,6 +193,10 @@ blockquote {
 	}
 }
 
+p ~ blockquote {
+	margin-top: 0px;
+}
+
 hr {
 	overflow: visible; /* For IE */
 	margin: 40px 0px 10px 0px;
